--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script src="https://kit.fontawesome.com/945d6f2503.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- quasar:entry-point -->
