결제 테스트중
결제 구현 및 테스트중

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Welcome to Firebase Hosting</title>
 
+
+     <!-- jQuery -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+<!-- iamport.payment.js -->
+<script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
+ 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.9.3/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
@@ -85,5 +93,7 @@
         }
       });
     </script>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
